# duct-tape

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml  flake.nix
crates/core/: Cargo.toml
crates/core/src/: bot.rs  config.rs  main.rs  notifications.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
plugins/arr-common/: Cargo.toml
plugins/arr-common/src/: lib.rs
plugins/claude/: Cargo.toml
plugins/claude/src/: backend.rs  lib.rs
plugins/health/: Cargo.toml
plugins/health/src/: lib.rs
plugins/notes/: Cargo.toml
plugins/notes/src/: lib.rs
plugins/plex/: Cargo.toml
plugins/plex/src/: lib.rs
plugins/prowlarr/: Cargo.toml
plugins/prowlarr/src/: lib.rs
plugins/qbit/: Cargo.toml
plugins/qbit/src/: lib.rs
plugins/radarr/: Cargo.toml
plugins/radarr/src/: lib.rs
plugins/request/: Cargo.toml
plugins/request/src/: lib.rs
plugins/sonarr/: Cargo.toml
plugins/sonarr/src/: lib.rs
plugins/unraid/: Cargo.toml
plugins/unraid/src/: api.rs  lib.rs
