[package]
name = "discord-assist"
version.workspace = true
edition.workspace = true

[dependencies]
discord-assist-plugin-api = { path = "../plugin-api" }
serenity = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
discord-assist-unraid = { path = "../../plugins/unraid" }
