[package]
name = "discord-assist"
version.workspace = true
edition.workspace = true

[dependencies]
discord-assist-plugin-api = { path = "../plugin-api" }
serenity = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
discord-assist-unraid = { path = "../../plugins/unraid" }
discord-assist-claude = { path = "../../plugins/claude" }
discord-assist-sonarr = { path = "../../plugins/sonarr" }
discord-assist-radarr = { path = "../../plugins/radarr" }
discord-assist-prowlarr = { path = "../../plugins/prowlarr" }
discord-assist-health = { path = "../../plugins/health" }
discord-assist-qbit = { path = "../../plugins/qbit" }
discord-assist-plex = { path = "../../plugins/plex" }
discord-assist-request = { path = "../../plugins/request" }
discord-assist-arr-common = { path = "../../plugins/arr-common" }
discord-assist-notes = { path = "../../plugins/notes" }
reqwest = { workspace = true }
serde_json = "1"
