[package]
name = "discord-assist-arr-common"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
