[package]
name = "discord-assist-plex"
version.workspace = true
edition.workspace = true

[dependencies]
discord-assist-plugin-api = { path = "../../crates/plugin-api" }
serenity = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1"
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
