[package]
name = "discord-assist-qbit"
version.workspace = true
edition.workspace = true

[dependencies]
discord-assist-plugin-api = { path = "../../crates/plugin-api" }
serenity = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
serde = { workspace = true }
serde_json = "1"
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
